--- a/JACKED/Purveyor/email-templates/confirmation.htm
+++ b/JACKED/Purveyor/email-templates/confirmation.htm
@@ -485,7 +485,7 @@
                                                 <h4>Order Date: {sale_date}</h4>
                                                 <h4>Order ID: {sale_id}</h4>
                                                 <ul>
-                                                    <li><strong>{product_name}</strong> - {product_total}</li>
+                                                    <li><strong>{product_name}</strong> - ${product_total}</li>
                                                     <li>Item Price: {product_price}</li>
                                                     <li>Quantity: {quantity}</li>
                                                 </ul>
