minor style tweaks to confirmation email

--- a/JACKED/Purveyor/email-templates/confirmation.htm
+++ b/JACKED/Purveyor/email-templates/confirmation.htm
@@ -489,17 +489,20 @@
                                                     <li>Item Price: {product_price}</li>
                                                     <li>Quantity: {quantity}</li>
                                                 </ul>
+                                                <ul>
+                                                    <li>Paid: <strong>{payment_symbol}{payment_total}</strong></li>
+                                                    <li>via {payment_method}</li>
+                                                </ul>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td width="100%" style="text-align:right;" valign="top" class="bodyContent">
-                                                Paid: <strong>{payment_symbol}{payment_total}</strong><br />
-                                                via {payment_method}
+                                                
                                             </td>
                                         </tr>
                                         <tr>
                                             <td valign="top" class="bodyContent">
-                                                If any information is incorrect, please contact Support immediately with your Order ID and we can help you.
+                                                If any information is incorrect, please contact Support immediately with your Order ID.
                                                 <br />
                                                 <br />
                                                 <h3>Thanks for your order!</h3>
