we should actually use dollars instead of cents

--- a/JACKED/Purveyor/email-templates/confirmation.htm
+++ b/JACKED/Purveyor/email-templates/confirmation.htm
@@ -486,18 +486,13 @@
                                                 <h4>Order ID: {sale_id}</h4>
                                                 <ul>
                                                     <li><strong>{product_name}</strong> - ${product_total}</li>
-                                                    <li>Item Price: {product_price}</li>
+                                                    <li>Item Price: ${product_price}</li>
                                                     <li>Quantity: {quantity}</li>
                                                 </ul>
                                                 <ul>
                                                     <li>Paid: <strong>{payment_symbol}{payment_total}</strong></li>
                                                     <li>via {payment_method}</li>
                                                 </ul>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td width="100%" style="text-align:right;" valign="top" class="bodyContent">
-                                                
                                             </td>
                                         </tr>
                                         <tr>
