add discounts details to confirmation email

--- a/JACKED/Purveyor/email-templates/confirmation.htm
+++ b/JACKED/Purveyor/email-templates/confirmation.htm
@@ -488,6 +488,7 @@
                                                     <li><strong>{product_name}</strong> - ${product_total}</li>
                                                     <li>Item Price: ${product_price}</li>
                                                     <li>Quantity: {quantity}</li>
+                                                    {discounts_li}
                                                 </ul>
                                                 <ul>
                                                     <li>Paid: <strong>{payment_symbol}{payment_total}</strong></li>
